# corporate_manager

./: .env.example  .gitignore  app.py  config.py  error_log.txt  extensions.py  fix.py  migrate_hash_passwords.py  process_images.py  pyproject.toml  requirements.txt  seed.py  test.py
api/: __init__.py  admin.py  attendance.py  auth.py  daily_updates.py  departments.py  holidays.py  leaves.py  profile.py  regularization.py  reports.py  self_assessment.py
schema/: migrations.py  models.py
services/: appraisal.py  attendance.py  holiday.py  leave.py  utils.py
static/: face_scan.css
static/css/: admin_panel.css  login.css  register.css  user_dashboard.css  view_edit.css
static/js/: register.js
templates/: 404.html  500.html  _sidebar_admin.html  _sidebar_employee.html  add_user.html  admin_attendance_overview.html  admin_departments.html  admin_enrol_face.html  admin_holidays.html  admin_leaves.html  admin_panel.html  admin_regularizations.html  admin_review_form.html  admin_self_assessments.html  admin_team_summary.html  all_daily_updates.html  change_password.html  create_employee.html  daily_update.html  edit_daily_update.html  edit_user.html  employee.html  face_auth.html  leaves.html  login.html  my_daily_updates.html  profile.html  register.html  regularization.html  self_assessment.html  user_dashboard.html  view_user.html
tests/: conftest.py  test_attendance.py  test_checkin.py  test_holiday.py  test_leave.py
